# lecture_bonus_examples

./: README.txt
07_01_using/: CMakeLists.txt  README.txt  remove_pointer.cpp  remove_pointer.h  remove_pointer_impl.h
07_02_explicit_instantiation/: CMakeLists.txt  README.txt  instantiate.cpp  instantiate_done.cpp  main.cpp  template.h  template_decl.h
07_03_compile_time_eval/: CMakeLists.txt  README.txt  compile_time.cpp  compile_time.h  compile_time_done.h
07_04_variadic_templates/: CMakeLists.txt  README.txt  variadic.cpp  variadic.h  variadic_done.h
07_05_asserts/: CMakeLists.txt  README.txt  asserts.cpp  template.h  template_done.h
